# DCD-3D-MedSeg

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
configs/: dcd_brats2024_gli.yaml  dcd_isles2022.yaml
dcd_medseg/: __init__.py
dcd_medseg/dataset_conversion/: __init__.py  dcd_prepare_brats2024_gli.py
dcd_medseg/training/: __init__.py
dcd_medseg/training/distillation/: __init__.py  config.py  distiller.py  train.py  utils.py
dcd_medseg/training/distillation/methods/: __init__.py  dcd.py  dcd_visualization.py
documentation/: dataset_format.md  explanation_plans_files.md  how_to_use_nnunet.md  ignore_label.md  installation_instructions.md  region_based_training.md  set_environment_variables.md  setting_up_paths.md
documentation/competitions/: AortaSeg24.md  AutoPETII.md
documentation/competitions/FLARE24/Task_2/: inference_flare_task2.py
documentation/competitions/Toothfairy2/: readme.md
nnunetv2/: paths.py
nnunetv2/batch_running/: collect_results_custom_Decathlon.py  generate_lsf_runs_customDecathlon.py
nnunetv2/batch_running/release_trainings/nnunetv2_v1/: collect_results.py
nnunetv2/dataset_conversion/: Dataset015_018_RibFrac_RibSeg.py  Dataset021_CTAAorta.py  Dataset023_AbdomenAtlas1_1Mini.py  Dataset224_AbdomenAtlas1.0.py  dcd_prepare_isles2022.py  prepare_isles2022_to_flair_grid.py
nnunetv2/imageio/: simpleitk_reader_writer.py
nnunetv2/inference/: predict_from_raw_data.py
nnunetv2/model_sharing/: model_download.py
nnunetv2/preprocessing/normalization/: default_normalization_schemes.py
nnunetv2/preprocessing/resampling/: resample_torch.py
nnunetv2/tests/integration_tests/: readme.md  run_nnunet_inference.py
nnunetv2/training/distillation/: README.md  distiller.py  train.py
nnunetv2/training/distillation/methods/: base.py
nnunetv2/training/lr_scheduler/: polylr.py
nnunetv2/training/nnUNetTrainer/variants/benchmarking/: nnUNetTrainerBenchmark_5epochs.py
nnunetv2/training/nnUNetTrainer/variants/network_architecture/: nnUNetTrainerBN.py
nnunetv2/utilities/: utils.py
